# duckdb-spanner

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: MainDistributionPipeline.yml  ReleaseAssets.yml
scripts/: check-duckdb-version.sh  check-google-cloud-rust.sh  check-release-asset-metadata.py  check-release-integrity.sh  package-release-assets.py  smoke-release-asset.py  test_check_release_asset_metadata.py  test_package_release_assets.py
src/: bind_utils.rs  cache.rs  client.rs  config.rs  connection.rs  convert.rs  copy.rs  ddl.rs  error.rs  lib.rs  macros.sql  metadata.rs  params.rs  query.rs  replacement.rs  runtime.rs  scalars.rs  scan.rs  schema.rs  streaming.rs  tables.rs  types.rs  vector_size.rs  vtab_safety.rs
test/sql/: spanner_copy.test  spanner_ddl.test  spanner_params.test  spanner_query.test  spanner_replacement_scan.test  spanner_scalars.test  spanner_scan.test  spanner_smoke.test  spanner_tables.test
tests/: integration.sh  integration_test.rs  setup_sqllogic_db.sh
tests/spanemuboost/: mod.rs
