[package]
name = "duckdb-spanner"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for querying Google Cloud Spanner databases"
repository = "https://github.com/apstndb/duckdb-spanner"
license = "MIT"
authors = ["apstndb"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = true

[features]
default = []
loadable-extension = ["duckdb/loadable-extension", "libduckdb-sys/loadable-extension"]

[dependencies]
duckdb = { version = "1.4", features = ["vtab"] }
# Direct dependency needed only for duckdb_is_null_value FFI call in bind_utils.rs.
# Remove once duckdb/duckdb-rs#676 is merged (vtab::Value::is_null).
libduckdb-sys = "1.4"
google-cloud-spanner = { package = "gcloud-spanner", version = "1.7", default-features = false, features = ["auth", "rustls-tls", "jwt-rust-crypto"] }
google-cloud-googleapis = { package = "gcloud-googleapis", version = "1.3", features = ["spanner"] }
google-cloud-gax = { package = "gcloud-gax", version = "1.3" }
prost-types = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
bigdecimal = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
thiserror = "2"
uuid = "1"
base64 = "0.22"
serde_json = "1"

[dev-dependencies]
testcontainers = "0.23"
duckdb = { version = "1.4", features = ["bundled", "vtab"] }

# Patched google-cloud-rust crates.
# gcloud-spanner patch: fix metadata/stats processing for empty PartialResultSets
# (QueryMode::Plan and zero-row results).
# https://github.com/yoshidan/google-cloud-rust/pull/428
# gcloud-googleapis and gcloud-gax must use the same git source to avoid
# duplicate crate conflicts with gcloud-spanner's workspace path dependencies.
[patch.crates-io]
gcloud-spanner = { git = "https://github.com/apstndb/google-cloud-rust.git", rev = "5f75fb7c7381f1f933c1998165e7bf11ea50e42e" }
gcloud-googleapis = { git = "https://github.com/apstndb/google-cloud-rust.git", rev = "5f75fb7c7381f1f933c1998165e7bf11ea50e42e" }
gcloud-gax = { git = "https://github.com/apstndb/google-cloud-rust.git", rev = "5f75fb7c7381f1f933c1998165e7bf11ea50e42e" }
