[package]
name = "duckdb-spanner"
version = "0.4.1"
edition = "2021"
description = "DuckDB extension for querying Google Cloud Spanner databases"
repository = "https://github.com/apstndb/duckdb-spanner"
license = "MIT"
authors = ["apstndb"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = true

[features]
default = []
loadable-extension = ["duckdb/loadable-extension"]

[dependencies]
duckdb = { version = "=1.10505.0", features = ["vtab", "vscalar"] }
google-cloud-spanner = { git = "https://github.com/googleapis/google-cloud-rust", rev = "ac6f8259e708abd471b63e3fad4b4f3b5f08de1c", default-features = false }
google-cloud-auth = { git = "https://github.com/googleapis/google-cloud-rust", rev = "ac6f8259e708abd471b63e3fad4b4f3b5f08de1c", default-features = false }
google-cloud-gax = { git = "https://github.com/googleapis/google-cloud-rust", rev = "ac6f8259e708abd471b63e3fad4b4f3b5f08de1c", default-features = false }
google-cloud-longrunning = { git = "https://github.com/googleapis/google-cloud-rust", rev = "ac6f8259e708abd471b63e3fad4b4f3b5f08de1c", default-features = false }
google-cloud-rpc = { git = "https://github.com/googleapis/google-cloud-rust", rev = "ac6f8259e708abd471b63e3fad4b4f3b5f08de1c", default-features = false }
google-cloud-lro = { git = "https://github.com/googleapis/google-cloud-rust", rev = "ac6f8259e708abd471b63e3fad4b4f3b5f08de1c", default-features = false }
google-cloud-spanner-admin-database-v1 = { git = "https://github.com/googleapis/google-cloud-rust", rev = "ac6f8259e708abd471b63e3fad4b4f3b5f08de1c", default-features = false }
google-cloud-spanner-admin-instance-v1 = { git = "https://github.com/googleapis/google-cloud-rust", rev = "ac6f8259e708abd471b63e3fad4b4f3b5f08de1c", default-features = false }
wkt = { package = "google-cloud-wkt", git = "https://github.com/googleapis/google-cloud-rust", rev = "ac6f8259e708abd471b63e3fad4b4f3b5f08de1c", default-features = false }
prost-types = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
bigdecimal = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
thiserror = "2"
uuid = "1"
base64 = "0.22"
serde_json = "1"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
testcontainers = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
duckdb = { version = "=1.10505.0", features = ["bundled", "vtab", "vscalar", "json"] }
